<?xml version="1.0"?>
<package format="2">
  <name>gramps_kd</name>
  <version>0.1.0</version>
  <description>Kinematics/Dynamics library for GRAMPS</description>

  <maintainer email="abhayd@allenai.org">Abhay Deshpande</maintainer>
  <author email="abhayd@allenai.org">Abhay Deshpande</author>
  <license>MIT</license>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>pinocchio</depend>
  <depend>urdf</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
</package>
